Fixed alignment issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -234,7 +234,7 @@ table.wolfridge th, td{
     height:3.5em;
     width:3.5em;
     padding:0px;
-    margin: 0px;
+    margin: auto;
 }
 
 .weather-icon-div{
